# Podstawy_C_Cpp

./: CMakeLists.txt
lista1/: zad1_1_1.cpp  zad1_1_2.cpp  zad1_1_3a.cpp  zad1_1_3b.cpp  zad1_1_3c.cpp  zad1_1_3d.cpp  zad1_1_dodatkowe.cpp
lista2/: CMakeLists.txt  zad2_1a.cpp  zad2_1b.cpp  zad2_1c.cpp  zad2_1d.cpp  zad2_1e.cpp  zad2_dodatkowe.cpp
lista3/: CMakeLists.txt  zad3_1a.cpp  zad3_1b.cpp  zad3_1c.cpp  zad3_1d.cpp  zad3_dodatkowe.cpp
lista4/: CMakeLists.txt  zad4_1a.cpp  zad4_1b.cpp  zad4_1c.cpp  zad4_1d.cpp  zad4_1e.cpp  zad4_1fa.cpp  zad4_1fb.cpp  zad4_dodatkowe.cpp
lista5/: CMakeLists.txt  zad5_1a.cpp  zad5_1b.cpp  zad5_1c.cpp  zad5_1d.cpp
