cmake_minimum_required(VERSION 3.26)
project(lista1)

set(CMAKE_CXX_STANDARD 17)

add_executable(zad1_1_1 lista1/zad1_1_1.cpp)
add_executable(zad1_1_2 lista1/zad1_1_2.cpp)
add_executable(zad1_1_3a lista1/zad1_1_3a.cpp)
add_executable(zad1_1_3b lista1/zad1_1_3b.cpp)
add_executable(zad1_1_3c lista1/zad1_1_3c.cpp)
add_executable(zad1_1_3d lista1/zad1_1_3d.cpp)
add_executable(zad1_1_dodatkowe lista1/zad1_1_dodatkowe.cpp)
add_executable(zad2_1_1 lista2/zad2_1a.cpp)
add_executable(zad3_dodatkowe lista3/zad3_dodatkowe.cpp)
add_executable(zad3_1a lista3/zad3_1a.cpp)
add_executable(zad3_1b lista3/zad3_1b.cpp)
add_executable(zad3_1c lista3/zad3_1c.cpp)
add_executable(zad3_1d lista3/zad3_1d.cpp)

add_executable(zad4_1a lista4/zad4_1a.cpp)
add_executable(zad4_1b lista4/zad4_1b.cpp)
add_executable(zad4_1c lista4/zad4_1c.cpp)
add_executable(zad4_1d lista4/zad4_1d.cpp)
add_executable(zad4_1e lista4/zad4_1e.cpp)
add_executable(zad4_1fa lista4/zad4_1fa.cpp)
add_executable(zad4_1fb lista4/zad4_1fb.cpp)
add_executable(zad4_dodatkowe lista4/zad4_dodatkowe.cpp)
add_executable(zad5_1a lista5/zad5_1a.cpp)
add_executable(zad5_1b lista5/zad5_1b.cpp)
add_executable(zad5_1c lista5/zad5_1c.cpp)
add_executable(zad5_1d lista5/zad5_1d.cpp)
