cmake_minimum_required(VERSION 3.26)
project(lista2)

set(CMAKE_CXX_STANDARD 17)

add_executable(lista2 zad2_1a.cpp)
add_executable(zad2_1b zad2_1b.cpp)
add_executable(zad2_1c zad2_1c.cpp)
add_executable(zad2_1d zad2_1d.cpp)
add_executable(zad2_1e zad2_1e.cpp)
add_executable(zad2_dodatkowe zad2_dodatkowe.cpp)
