cmake_minimum_required(VERSION 3.26)
project(lista4)

set(CMAKE_CXX_STANDARD 17)

add_executable(lista4 zad4_1a.cpp)
add_executable(zad1b zad4_1b.cpp)
add_executable(zad1c zad4_1c.cpp)
add_executable(zad1d zad4_1d.cpp)
add_executable(zad1e zad4_1e.cpp)
add_executable(zad1fa zad4_1fa.cpp)
add_executable(zad1fb zad4_1fb.cpp)
add_executable(zad1fa1 zad4_1fa1.cpp)
add_executable(dodatkowe zad4_dodatkowe.cpp)
